--- a/source/less/blocks/example.less
+++ b/source/less/blocks/example.less
@@ -14,15 +14,15 @@
   margin-top: 33px;
   color: @special_dark-grey;
 }
-.total__list{
+.example__total-list{
   .li-none;
   display: flex;
   justify-content: space-between;
 }
-.total__item{
+.example__total-item{
   position: relative;
 }
-.total__title{
+.example__total-title{
   .size (124px, 56px);
   .font__size(24px, 24px);
   color: @title_color;
@@ -35,7 +35,7 @@
   text-align: center;
   margin-bottom: 0;
 }
-.total__subtitle{
+.example__total-subtitle{
   .font__arial;
   .font__size(12px, 12px);
   color: @special_dark-grey;
@@ -47,12 +47,12 @@
   padding-left: 15px;
   padding-right: 15px;
 }
-.subtitle__block{
+.example__subtitle-block{
   display: flex;
   flex-direction: column;
   align-items: center;
 }
-.maney-total{
+.example__maney-total{
   .font__size(14px, 20px);
   text-transform: uppercase;
   color: @title_color;
@@ -62,39 +62,11 @@
   padding-right: 15px;
   margin-top: 25px;
 }
-.visualization{
+.example__visualization{
   display: block;
   margin-top: 42px;
   .size (280px, 320px);
 }
-.visualization__img{
+.example__visualization-block{
   display: flex;
-}
-.scroll__box {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.slider__body{
-  position: relative;
-  width: 84px;
-  height: 14px;
-  background-color: @basic_white;
-  border: 1px solid @special_grey;
-  border-radius: 6px;
-}
-.slider__scroll{
-  position: absolute;
-  top: 3px;
-  left: 4px;
-  width: 35px;
-  height: 6px;
-  background-color: @basic_color;
-  border-radius: 6px;
-}
-.scroll__button{
-  border: none;
-  text-transform: uppercase;
-  padding: 10px;
-  background-color: @bg_example;
 }
