--- a/source/less/button.less
+++ b/source/less/button.less
@@ -9,28 +9,21 @@
   font-size: 16px;
   padding: 16px 44px 8px 44px;
 }
-.button-all{
-  background-color: @basic_color;
+.button--diet{
+  display: block;
+  margin: 0 auto;
+  margin-bottom: 22px;
 }
-.button-form{
-  text-decoration: none;
-  color: #FFFFFF;
-  text-transform: uppercase;
-  display: inline-block;
-  text-align: center;
-  width: 280px;
-  background-color: #68B738;
-  font-size: 16px;
-  padding: 15px 44px 15px 44px;
-  border: none;
+.button--all-goods{
+  background-color: @basic_color;
 }
 .button--all{
   color: @special_dark-grey;
   background-color:@basic_grey;
 }
-.button--margin-bottom{
+.button--product{
   margin-bottom: 14px;
 }
-.button--ag-position{
+.button--additional-goods{
   margin-bottom: 19px;
 }
