--- a/source/less/blocks/diet.less
+++ b/source/less/blocks/diet.less
@@ -1,4 +1,4 @@
-.block__text{
+.diet__text{
   background-color: @basic_color;
   opacity: 85%;
   width: 320px;
@@ -46,15 +46,10 @@
   background-color: @basic_color;
   border-radius: 100%;
 }
-.container__img{
+.diet__container-img{
   height: 136px;
 }
-.button-diet{
-  display: block;
-  margin: 0 auto;
-  margin-bottom: 22px;
-}
-.slimming-diet{
+.diet__slimming-block{
   background-color: @basic_grey;
   width: 280px;
   height: 266px;
@@ -63,7 +58,7 @@
   padding-left: 20px;
   padding-right: 33px;
 }
-.diet-weight-gain{
+.diet__weight-gain-block{
   background-color: @basic_grey;
   width: 280px;
   height: 266px;
