--- a/source/less/blocks/footer.less
+++ b/source/less/blocks/footer.less
@@ -1,4 +1,4 @@
-.footer-inform__wrapper{
+.footer__wrapper-inform-box{
   width: 320px;
   margin: 0 auto;
 }
@@ -6,38 +6,27 @@
   .center;
   background-color: @basic_grey;
 }
-.footer__index{
-  background-color: @basic_white;
+.footer__inform-box{
+  background-color: @basic_grey;
   height: 114px;
   display: flex;
 }
-.inform__title{
+.footer__inform-box--background {
+  background-color: @basic_white;
+}
+.footer__title-inform{
   .font__size(16px, 18px);
   color: @info_color;
   text-transform: uppercase;
   margin-top: 28px;
   padding-left: 20px;
 }
-.inform__address{
+.footer__address-inform{
   .font__size(14px, 20px);
   .font__arial;
   color: @special_dark-grey;
   margin-top: 28px;
   padding-right: 20px;
-}
-.page-footer__copyright{
-  .font__arial;
-  .font__size(16px, 18px);
-  color: @special_dark-grey;
-}
-.social__list{
-  .li-none;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.social__item{
-  padding: 20px;
 }
 .footer__logo{
   display:block;
@@ -45,15 +34,15 @@
   padding-top: 39px;
   padding-bottom: 31px;
 }
-.page-footer__social{
-  height: 63px;
-  border-top: 1px solid @border_diet;
-  border-bottom: 1px solid @border_diet;
-}
-.page-footer__copyright{
+.footer__copyright{
   height: 78;
   display: flex;
   justify-content: space-between;
   margin-top: 17px;
   padding-bottom: 22px;
+}
+.footer__copyright__title{
+  .font__arial;
+  .font__size(16px, 18px);
+  color: @special_dark-grey;
 }
