--- a/source/less/style.less
+++ b/source/less/style.less
@@ -6,18 +6,30 @@
 @import "button";
 @import "base/layout";
 @import "visually-hidden";
+@import "page-main";
 
+// blocks
+@import "blocks/navigation";
+@import "blocks/site-navigation";
+@import "blocks/footer";
+@import "blocks/social";
 // blocks index
-@import "blocks/header";
 @import "blocks/diet";
 @import "blocks/description";
 @import "blocks/example";
-@import "blocks/footer";
-
+@import "blocks/scroll";
 
 // blocks form
 @import "blocks/cat-profile";
+@import "blocks/cat-data";
+@import "blocks/program-selection";
+@import "blocks/title-line";
+@import "blocks/feedback";
+@import "blocks/commit";
+@import "blocks/checkbox";
+
 // blocks catalog
-@import "blocks/main-catalog";
 @import "blocks/product";
+@import "blocks/all-goods";
 @import "blocks/additional-goods";
+@import "blocks/bonus";
