--- a/5/css/style.css
+++ b/5/css/style.css
@@ -59,29 +59,22 @@
   background-color: #5EAA2F;
   opacity: 0.3;
 }
-.button-all {
-  background-color: #68B738;
+.button--diet {
+  display: block;
+  margin: 0 auto;
+  margin-bottom: 22px;
 }
-.button-form {
-  text-decoration: none;
-  color: #FFFFFF;
-  text-transform: uppercase;
-  display: inline-block;
-  text-align: center;
-  width: 280px;
+.button--all-goods {
   background-color: #68B738;
-  font-size: 16px;
-  padding: 15px 44px 15px 44px;
-  border: none;
 }
 .button--all {
   color: #444444;
   background-color: #F2F2F2;
 }
-.button--margin-bottom {
+.button--product {
   margin-bottom: 14px;
 }
-.button--ag-position {
+.button--additional-goods {
   margin-bottom: 19px;
 }
 html {
@@ -109,7 +102,30 @@ body {
   clip: rect(0 0 0 0);
   overflow: hidden;
 }
-.mobiel-header {
+.page-main__title-catalog {
+  width: 320px;
+  margin: 0 auto;
+  font-size: 36px;
+  line-height: 36px;
+  color: #000000;
+  margin-top: 27px;
+  margin-bottom: 8px;
+  padding-left: 20px;
+  padding-bottom: 41px;
+  border-bottom: 1px solid #EBEBEB;
+}
+.page-main__title-form {
+  width: 320px;
+  margin: 0 auto;
+  font-size: 36px;
+  line-height: 36px;
+  color: #000000;
+  font-weight: 400;
+  margin-top: 27px;
+  margin-bottom: 37px;
+  padding-left: 20px;
+}
+.navigation__block-icons {
   width: 320px;
   margin: 0 auto;
   padding: 0 20px;
@@ -118,14 +134,14 @@ body {
   justify-content: space-between;
   height: 66px;
 }
-.header__burger {
+.navigation__burger {
   display: block;
   position: relative;
   width: 24px;
   height: 16px;
   z-index: 3;
 }
-.header__burger span {
+.navigation__burger span {
   position: absolute;
   background-color: #000000;
   left: 0;
@@ -134,8 +150,8 @@ body {
   top: 7px;
   transform: scale(0);
 }
-.header__burger:before,
-.header__burger:after {
+.navigation__burger:before,
+.navigation__burger:after {
   content: '';
   background-color: #000000;
   position: absolute;
@@ -143,22 +159,22 @@ body {
   height: 2px;
   left: 0;
 }
-.header__burger:before {
+.navigation__burger:before {
   top: 0;
   transform: rotate(45deg);
   top: 7px;
 }
-.header__burger:after {
+.navigation__burger:after {
   bottom: 0;
   transform: rotate(-45deg);
   bottom: 7px;
 }
-.header__menu {
+.site-navigation {
   width: 320px;
   margin: 0 auto;
   padding: 0 20px;
 }
-.main-nav__list {
+.site-navigation__list {
   list-style: none;
   padding: 0;
   margin: 0;
@@ -166,10 +182,10 @@ body {
   flex-direction: column;
   align-items: center;
 }
-.site-list__item {
+.site-navigation__item {
   border-top: 2px solid #E6E6E6;
 }
-.site-list__link {
+.site-navigation__link {
   text-decoration: none;
   color: #000000;
   text-transform: uppercase;
@@ -182,13 +198,82 @@ body {
   text-align: center;
   padding-top: 22px;
 }
-.site-list__link:hover {
+.site-navigation____link:hover {
   opacity: 0.6;
 }
-.site-list__link:active {
+.site-navigation____link:active {
   opacity: 0.3;
 }
-.block__text {
+.footer__wrapper-inform-box {
+  width: 320px;
+  margin: 0 auto;
+}
+.footer__wrapper {
+  width: 320px;
+  margin: 0 auto;
+  padding: 0 20px;
+  background-color: #F2F2F2;
+}
+.footer__inform-box {
+  background-color: #F2F2F2;
+  height: 114px;
+  display: flex;
+}
+.footer__inform-box--background {
+  background-color: #FFFFFF;
+}
+.footer__title-inform {
+  font-size: 16px;
+  line-height: 18px;
+  color: #111111;
+  text-transform: uppercase;
+  margin-top: 28px;
+  padding-left: 20px;
+}
+.footer__address-inform {
+  font-size: 14px;
+  line-height: 20px;
+  font-family: Arial, sans-serif;
+  color: #444444;
+  margin-top: 28px;
+  padding-right: 20px;
+}
+.footer__logo {
+  display: block;
+  margin: 0 auto;
+  padding-top: 39px;
+  padding-bottom: 31px;
+}
+.footer__copyright {
+  height: 78;
+  display: flex;
+  justify-content: space-between;
+  margin-top: 17px;
+  padding-bottom: 22px;
+}
+.footer__copyright__title {
+  font-family: Arial, sans-serif;
+  font-size: 16px;
+  line-height: 18px;
+  color: #444444;
+}
+.social {
+  height: 63px;
+  border-top: 1px solid #D9D9D9;
+  border-bottom: 1px solid #D9D9D9;
+}
+.social__list {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.social__item {
+  padding: 20px;
+}
+.diet__text {
   background-color: #68B738;
   opacity: 85%;
   width: 320px;
@@ -240,15 +325,10 @@ body {
   background-color: #68B738;
   border-radius: 100%;
 }
-.container__img {
+.diet__container-img {
   height: 136px;
 }
-.button-diet {
-  display: block;
-  margin: 0 auto;
-  margin-bottom: 22px;
-}
-.slimming-diet {
+.diet__slimming-block {
   background-color: #F2F2F2;
   width: 280px;
   height: 266px;
@@ -257,7 +337,7 @@ body {
   padding-left: 20px;
   padding-right: 33px;
 }
-.diet-weight-gain {
+.diet__weight-gain-block {
   background-color: #F2F2F2;
   width: 280px;
   height: 266px;
@@ -349,17 +429,17 @@ body {
   margin-top: 33px;
   color: #444444;
 }
-.total__list {
+.example__total-list {
   list-style: none;
   padding: 0;
   margin: 0;
   display: flex;
   justify-content: space-between;
 }
-.total__item {
+.example__total-item {
   position: relative;
 }
-.total__title {
+.example__total-title {
   width: 124px;
   height: 56px;
   font-size: 24px;
@@ -374,7 +454,7 @@ body {
   text-align: center;
   margin-bottom: 0;
 }
-.total__subtitle {
+.example__total-subtitle {
   font-family: Arial, sans-serif;
   font-size: 12px;
   line-height: 12px;
@@ -387,12 +467,12 @@ body {
   padding-left: 15px;
   padding-right: 15px;
 }
-.subtitle__block {
+.example__subtitle-block {
   display: flex;
   flex-direction: column;
   align-items: center;
 }
-.maney-total {
+.example__maney-total {
   font-size: 14px;
   line-height: 20px;
   text-transform: uppercase;
@@ -403,21 +483,21 @@ body {
   padding-right: 15px;
   margin-top: 25px;
 }
-.visualization {
+.example__visualization {
   display: block;
   margin-top: 42px;
   width: 280px;
   height: 320px;
 }
-.visualization__img {
+.example__visualization-block {
   display: flex;
 }
-.scroll__box {
+.scroll {
   display: flex;
   justify-content: center;
   align-items: center;
 }
-.slider__body {
+.scroll__body-slider {
   position: relative;
   width: 84px;
   height: 14px;
@@ -425,7 +505,7 @@ body {
   border: 1px solid #CDCDCD;
   border-radius: 6px;
 }
-.slider__scroll {
+.scroll__slider {
   position: absolute;
   top: 3px;
   left: 4px;
@@ -440,84 +520,10 @@ body {
   padding: 10px;
   background-color: #EAEAEA;
 }
-.footer-inform__wrapper {
-  width: 320px;
-  margin: 0 auto;
-}
-.footer__wrapper {
-  width: 320px;
-  margin: 0 auto;
-  padding: 0 20px;
-  background-color: #F2F2F2;
-}
-.footer__index {
-  background-color: #FFFFFF;
-  height: 114px;
-  display: flex;
-}
-.inform__title {
-  font-size: 16px;
-  line-height: 18px;
-  color: #111111;
-  text-transform: uppercase;
-  margin-top: 28px;
-  padding-left: 20px;
-}
-.inform__address {
-  font-size: 14px;
-  line-height: 20px;
-  font-family: Arial, sans-serif;
-  color: #444444;
-  margin-top: 28px;
-  padding-right: 20px;
-}
-.page-footer__copyright {
-  font-family: Arial, sans-serif;
-  font-size: 16px;
-  line-height: 18px;
-  color: #444444;
-}
-.social__list {
-  list-style: none;
-  padding: 0;
-  margin: 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.social__item {
-  padding: 20px;
-}
-.footer__logo {
-  display: block;
-  margin: 0 auto;
-  padding-top: 39px;
-  padding-bottom: 31px;
-}
-.page-footer__social {
-  height: 63px;
-  border-top: 1px solid #D9D9D9;
-  border-bottom: 1px solid #D9D9D9;
-}
-.page-footer__copyright {
-  height: 78;
-  display: flex;
-  justify-content: space-between;
-  margin-top: 17px;
-  padding-bottom: 22px;
-}
 .cat-profile__wrapper {
   width: 320px;
   margin: 0 auto;
   padding: 0 20px;
-}
-.main-form__title {
-  font-size: 36px;
-  line-height: 36px;
-  color: #000000;
-  font-weight: 400;
-  margin-top: 27px;
-  margin-bottom: 37px;
 }
 .cat-profile__title {
   font-size: 14px;
@@ -528,53 +534,60 @@ body {
   margin-bottom: 39px;
   width: 226px;
 }
-.cat-data__wrapper {
+.cat-profile__button {
+  text-decoration: none;
+  color: #FFFFFF;
+  text-transform: uppercase;
+  display: inline-block;
+  text-align: center;
+  width: 280px;
+  background-color: #68B738;
+  font-size: 16px;
+  padding: 15px 44px 15px 44px;
+  border: none;
+}
+.cat-profile__mandatory-subheading {
+  font-size: 14px;
+  line-height: 16px;
+  color: #000000;
+  font-family: Arial, sans-serif;
+  text-align: center;
+  margin-top: 21px;
+  margin-bottom: 32px;
+}
+.cat-data {
   width: 320px;
   margin: 0 auto;
   padding: 0 20px;
-}
-.cat-data__item {
-  display: flex;
-  justify-content: flex-start;
-  align-items: baseline;
-}
-.form__data {
-  height: 46px;
-  padding: 14px;
-  width: 100%;
-  margin-bottom: 13px;
-}
-.form__desc {
-  margin-right: 14px;
-}
-.form__desc {
-  color: #444444;
-  text-transform: uppercase;
-}
-.form__data {
-  color: #444444;
-  text-transform: uppercase;
-}
-.form__desc--color {
-  color: #222222;
-}
-.form__desc {
-  font-size: 14px;
-  line-height: 18px;
-}
-.form__data {
-  font-size: 14px;
-  line-height: 18px;
-}
-.form__desc__color-add {
-  color: #000000;
 }
 .cat-data__list {
   list-style: none;
   padding: 0;
   margin: 0;
 }
-.program-selection__wrapper {
+.cat-data__item {
+  display: flex;
+  justify-content: flex-start;
+  align-items: baseline;
+}
+.cat-data__form-desc {
+  font-size: 14px;
+  line-height: 18px;
+  margin-right: 14px;
+  color: #444444;
+  text-transform: uppercase;
+}
+.cat-data__form-data {
+  font-size: 14px;
+  line-height: 18px;
+  color: #444444;
+  text-transform: uppercase;
+  height: 46px;
+  padding: 14px;
+  width: 100%;
+  margin-bottom: 13px;
+}
+.program-selection {
   width: 320px;
   margin: 0 auto;
 }
@@ -595,13 +608,13 @@ body {
   margin-bottom: 12px;
   margin-left: 20px;
 }
-.form__radio {
+.program-selection__form-radio {
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
   position: absolute;
 }
-.radio__icon {
+.program-selection__radio-icon {
   display: inline-block;
   width: 30px;
   height: 30px;
@@ -610,7 +623,7 @@ body {
   position: relative;
   margin-right: 16px;
 }
-.radio__icon::before {
+.program-selection__radio-icon::before {
   content: "";
   position: absolute;
   top: 50%;
@@ -624,38 +637,63 @@ body {
   opacity: 0;
   transition: 0.2s;
 }
-.form__radio:checked + .radio__icon::before {
+.program-selection__form-radio:checked + .program-selection__radio-icon::before {
   opacity: 1;
 }
-.form__subtitle {
+.program-selection__form-desc {
+  font-size: 14px;
+  line-height: 18px;
+  margin-right: 14px;
+  color: #444444;
+  text-transform: uppercase;
+}
+.program-selection__form-desc--color {
+  color: #222222;
+}
+.title-line {
+  width: 320px;
+  margin: 0 auto;
+}
+.title-line__wrapper {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.title-line__text {
   font-size: 24px;
   line-height: 26px;
   color: #000000;
   margin: 0;
 }
-.line-date__wrapper {
-  width: 320px;
-  margin: 0 auto;
-}
-.line__date {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-.form__subtitle--position-date {
+.title-line__text--position-date {
   margin-top: 26px;
   margin-bottom: 35px;
   margin-left: 20px;
   width: 202px;
 }
-.middle__line {
+.title-line__text--position-date {
+  margin-top: 26px;
+  margin-bottom: 35px;
+  margin-left: 20px;
+  width: 202px;
+}
+.title-line__text--position-commit {
+  margin-left: 20px;
+  padding-right: 22px;
+  padding-top: 9px;
+}
+.title-line__text--position-add {
+  margin-left: 20px;
+  padding-right: 22px;
+}
+.title-line__line {
   content: "";
   display: block;
   height: 2px;
   width: 100%;
   background-color: #68B738;
 }
-.feedback__wrapper {
+.feedback {
   width: 320px;
   margin: 0 auto;
   padding: 0 20px;
@@ -671,12 +709,24 @@ body {
   align-items: baseline;
   margin-bottom: 14px;
 }
-.form__subtitle--position-commit {
-  margin-left: 20px;
-  padding-right: 22px;
-  padding-top: 9px;
+.feedback__form-data {
+  font-size: 14px;
+  line-height: 18px;
+  color: #444444;
+  text-transform: uppercase;
+  height: 46px;
+  padding: 14px;
+  width: 100%;
+  margin-bottom: 13px;
 }
-.commit__wrapper {
+.feedback__form-desc {
+  font-size: 14px;
+  line-height: 18px;
+  margin-right: 14px;
+  color: #444444;
+  text-transform: uppercase;
+}
+.commit {
   width: 320px;
   margin: 0 auto;
   padding: 0 20px;
@@ -690,11 +740,7 @@ body {
   resize: none;
   padding: 10px 12px 10px 15px;
 }
-.form__subtitle--position-add {
-  margin-left: 20px;
-  padding-right: 22px;
-}
-.checkbox__wrapper {
+.checkbox {
   width: 320px;
   margin: 0 auto;
   padding: 0 20px;
@@ -712,7 +758,7 @@ body {
   align-items: center;
   margin-bottom: 12px;
 }
-.form__checkbox {
+.checkbox__form {
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
@@ -739,29 +785,18 @@ body {
   opacity: 0;
   transition: 0.2s;
 }
-.form__checkbox:checked + .checkbox__icon::before {
+.checkbox__form:checked + .checkbox__icon::before {
   opacity: 1;
 }
-.mandatory__subheading {
+.checkbox__form-desc {
   font-size: 14px;
-  line-height: 16px;
-  color: #000000;
-  font-family: Arial, sans-serif;
-  text-align: center;
-  margin-top: 21px;
-  margin-bottom: 32px;
+  line-height: 18px;
+  margin-right: 14px;
+  color: #444444;
+  text-transform: uppercase;
 }
-.main-catalog__title {
-  width: 320px;
-  margin: 0 auto;
-  font-size: 36px;
-  line-height: 36px;
+.checkbox__form-desc--color-add {
   color: #000000;
-  margin-top: 27px;
-  margin-bottom: 8px;
-  padding-left: 20px;
-  padding-bottom: 41px;
-  border-bottom: 1px solid #EBEBEB;
 }
 .product__wrapper {
   width: 320px;
@@ -769,18 +804,6 @@ body {
 }
 .product__all-box {
   padding: 0 20px;
-}
-.main-catalog__title {
-  width: 320px;
-  margin: 0 auto;
-  font-size: 36px;
-  line-height: 36px;
-  color: #000000;
-  margin-top: 27px;
-  margin-bottom: 8px;
-  padding-left: 20px;
-  padding-bottom: 41px;
-  border-bottom: 1px solid #EBEBEB;
 }
 .product__list {
   list-style: none;
@@ -828,7 +851,7 @@ body {
   padding: 0 20px 25px 20px;
   border-bottom: 1px solid #EBEBEB;
 }
-.all-product__watch {
+.all-goods__watch {
   position: relative;
   display: block;
   width: 30px;
@@ -853,7 +876,7 @@ body {
   background-color: #D3D3D3;
   transform: rotate(90deg);
 }
-.product-all__title {
+.all-goods__title {
   font-size: 16px;
   line-height: 20px;
   font-weight: normal;
@@ -872,11 +895,6 @@ body {
   margin-top: 0;
   margin-bottom: 21px;
 }
-.additional-goods-title__wrapper {
-  width: 320px;
-  margin: 0 auto;
-  padding-left: 20px;
-}
 .additional-goods__title {
   font-size: 22px;
   line-height: 22px;
@@ -886,16 +904,16 @@ body {
   padding-right: 22px;
   margin-bottom: 36px;
 }
-.ag-line-date__wrapper {
+.additional-goods__wrapper-line-date {
   width: 320px;
   margin: 0 auto;
 }
-.ag-line__date {
+.additional-goods__line-date {
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
-.ag-middle__line {
+.additional-goods__middle-line {
   content: "";
   display: block;
   height: 2px;
@@ -916,7 +934,7 @@ body {
 .additional-goods__item {
   border-bottom: 1px solid #CDCDCD;
 }
-.additional-goods__subtitle {
+.additional-goods__subtitle-product {
   font-size: 16px;
   line-height: 16px;
   color: #222222;
@@ -924,14 +942,19 @@ body {
   margin-top: 13px;
   margin-bottom: 13px;
 }
-.additional-label,
-.additional-value {
+.additional-goods__label-product {
   font-size: 14px;
   line-height: 14px;
   font-family: Arial, sans-serif;
   margin-bottom: 15px;
 }
-.additional-row {
+.additional-goods__value-product {
+  font-size: 14px;
+  line-height: 14px;
+  font-family: Arial, sans-serif;
+  margin-bottom: 15px;
+}
+.additional-goods__row-product {
   display: flex;
   justify-content: space-between;
   margin: 0;
